Merging over code formatting changes from trunk.